add operation with publisher entity and some refactoring

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,8 @@ c.passwordConfirmPH=Confirm Password
 c.admin=Administrator
 c.librarian=Librarian
 c.user=User
+c.name=Publisher name
+c.namePH=Enter publisher name
 
 ###all_users.html###
 au.title=All users
@@ -43,3 +45,15 @@ eu.head=Edit user
 eu.passwordPH=Enter new password or leave empty, if change don`t needed
 eu.passwordConfirmPH=Confirm new password or leave empty, if change don`t needed
 eu.penaltyPH=Enter penalty
+
+###all_publishers.html###
+ap.title=All publishers
+ap.head=List of publishers
+
+###create_publisher.html
+cp.title=Create publisher
+cp.head=Create publisher
+
+###edit_publisher.html###
+ep.title=Edit publisher
+ep.head=Edit publisher
