--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -28,6 +28,8 @@ c.passwordConfirmPH=Подтвердите пароль
 c.admin=Администратор
 c.librarian=Библиотекарь
 c.user=Пользователь
+c.name=Название издателя
+c.namePH=Введите название издателя
 
 ###all_users.html###
 au.title=Все пользователи
@@ -43,3 +45,15 @@ eu.head=Редактирование пользователя
 eu.passwordPH=Введите новый пароль, или оставте поле пустым, если изменения не нужны
 eu.passwordConfirmPH=Подтвердите новый пароль, или оставте поле пустым, если изменения не нужны
 eu.penaltyPH=Введите пеню
+
+###all_publishers.html###
+ap.title=Все издатели
+ap.head=Список издателей
+
+###create_publisher.html
+cp.title=Создать издателя
+cp.head=Создание издателя
+
+###edit_publisher.html###
+ep.title=Редактировать издателя
+ep.head=Редактирование издателя
