add operation with author entity and some refactoring

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ lastName.empty=Last name must not be empty!
 password.regex=Password must contain at least 10 latin characters or numbers!
 password.equals=Both passwords must be equal!
 penalty.negative=Penalty must be greater or equal zero!
+name.empty=Publisher`s name must not be empty!
 
 ###common###
 c.login=Login
@@ -57,3 +58,15 @@ cp.head=Create publisher
 ###edit_publisher.html###
 ep.title=Edit publisher
 ep.head=Edit publisher
+
+###all_authors.html###
+aa.title=All authors
+aa.head=List of authors
+
+###create_author.html###
+ca.title=Create author
+ca.head=Create author
+
+###edit_author.html###
+ea.title=Edit author
+ea.head=Edit author
