--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -5,6 +5,7 @@ lastName.empty=Фамилия не может быть пустой!
 password.regex=Пароль должен содержать миним 10 цифр или латинских букв!
 password.equals=Пароли должны совпадать!
 penalty.negative=Пеня должна быть больше или равной нулю!
+name.empty=Название издателя не должно быть пустым!
 
 ###common###
 c.login=Логин
