add operation with book entity and some refactoring

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,12 @@ password.regex=Password must contain at least 10 latin characters or numbers!
 password.equals=Both passwords must be equal!
 penalty.negative=Penalty must be greater or equal zero!
 name.empty=Publisher`s name must not be empty!
+title.empty=Title must not be empty!
+title.too.long=Title must be shorter than 100 characters!
+releaseDate.negative=Release date must be greater or equal zero!
+releaseDate.before=Release date must be lesser than now!
+quantity.zerOrLess=Quantity must be greater than zero!
+quantity.delta=Quantity can not be changed more than available value!
 
 ###common###
 c.login=Login
@@ -31,6 +37,16 @@ c.librarian=Librarian
 c.user=User
 c.name=Publisher name
 c.namePH=Enter publisher name
+c.title=Title
+c.titlePH=Enter title
+c.releaseDate=Release year
+c.releaseDatePH=Enter release year
+c.publisher=Publisher
+c.author.lastName=Author last name
+c.author.firstName=Author first name
+c.quantity=Quantity
+c.quantityPH=Enter quantity
+c.author=Author
 
 ###all_users.html###
 au.title=All users
@@ -70,3 +86,16 @@ ca.head=Create author
 ###edit_author.html###
 ea.title=Edit author
 ea.head=Edit author
+
+###all_books.html###
+ab.title=All books
+ab.head=List of books
+
+###create_book.html###
+cb.title=Create book
+cb.head=Create book
+
+###update_book.html###
+ub.title=Update book
+ub.head=Update book
+ub.available=Available
