--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -6,6 +6,12 @@ password.regex=Пароль должен содержать миним 10 циф
 password.equals=Пароли должны совпадать!
 penalty.negative=Пеня должна быть больше или равной нулю!
 name.empty=Название издателя не должно быть пустым!
+title.empty=Название книги не может быть пустым!
+title.too.long=Название книги должно быть короче 100 символов!
+releaseDate.negative=Дата издания должна быть после 0 года!
+releaseDate.before=Дата издания должна предшествовать текущей дате!
+quantity.zerOrLess=Количество должно быть больше нуля!
+quantity.delta=Количество не может быть изменено более чем на величену доступных книг!
 
 ###common###
 c.login=Логин
@@ -31,6 +37,16 @@ c.librarian=Библиотекарь
 c.user=Пользователь
 c.name=Название издателя
 c.namePH=Введите название издателя
+c.title=Название книги
+c.titlePH=Введите название книги
+c.releaseDate=Год издания
+c.releaseDatePH=Введите год издания
+c.publisher=Издатель
+c.author.lastName=Имя автора
+c.author.firstName=Фамилия автора
+c.quantity=Количество
+c.quantityPH=Введите количество
+c.author=Автор
 
 ###all_users.html###
 au.title=Все пользователи
@@ -58,3 +74,28 @@ cp.head=Создание издателя
 ###edit_publisher.html###
 ep.title=Редактировать издателя
 ep.head=Редактирование издателя
+
+###all_authors.html###
+aa.title=Все авторы
+aa.head=Список авторов
+
+###create_author.html###
+ca.title=Создать автора
+ca.head=Создание автора
+
+###edit_author.html###
+ea.title=Редактировать автора
+ea.head=Редактирование автора
+
+###all_books.html###
+ab.title=Все книги
+ab.head=Список книг
+
+###create_book.html###
+cb.title=Создать книгу
+cb.head=Создание книги
+
+###update_book.html###
+ub.title=Редактировать книгу
+ub.head=Редактирование книги
+ub.available=Доступно
