add authentication and authorization and some refactoring

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,9 +48,17 @@ c.quantity=Quantity
 c.quantityPH=Enter quantity
 c.author=Author
 
+###admin_page.html###
+a.title=Administrator page
+a.head=Administrator page
+a.users=Users menu
+a.books=Books menu
+a.authors=Authors menu
+a.publishers=Publishers menu
+
 ###all_users.html###
 au.title=All users
-au.head=List of users
+au.head=Users list
 
 ###create_user.html###
 cu.title=Create user
@@ -65,7 +73,7 @@ eu.penaltyPH=Enter penalty
 
 ###all_publishers.html###
 ap.title=All publishers
-ap.head=List of publishers
+ap.head=Publishers list
 
 ###create_publisher.html
 cp.title=Create publisher
@@ -77,7 +85,7 @@ ep.head=Edit publisher
 
 ###all_authors.html###
 aa.title=All authors
-aa.head=List of authors
+aa.head=Authors list
 
 ###create_author.html###
 ca.title=Create author
@@ -89,7 +97,7 @@ ea.head=Edit author
 
 ###all_books.html###
 ab.title=All books
-ab.head=List of books
+ab.head=Books list
 
 ###create_book.html###
 cb.title=Create book
@@ -99,3 +107,21 @@ cb.head=Create book
 ub.title=Update book
 ub.head=Update book
 ub.available=Available
+
+###index.html###
+i.title=Available books
+i.head=List of available books
+
+###login.html###
+l.title=Login
+l.head=Please, login
+l.button=Log in
+l.error.message=Invalid login or password
+l.register.text=Not registered yet? Then
+l.register.link=Register
+
+###registration.html###
+r.title=Registration
+r.head=Please, sign up
+r.button=Sign up
+r.error.message=Login already in use
