--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -48,6 +48,14 @@ c.quantity=Количество
 c.quantityPH=Введите количество
 c.author=Автор
 
+###admin_page.html###
+a.title=Страница администратора
+a.head=Страница администратора
+a.users=Пользователи
+a.books=Книги
+a.authors=Авторы
+a.publishers=Издатели
+
 ###all_users.html###
 au.title=Все пользователи
 au.head=Список пользователей
@@ -99,3 +107,21 @@ cb.head=Создание книги
 ub.title=Редактировать книгу
 ub.head=Редактирование книги
 ub.available=Доступно
+
+###index.html###
+i.title=Доступные книги
+i.head=Список доступных книг
+
+###login.html###
+l.title=Войти
+l.head=Пожалуйста, залогиньтесь
+l.button=Войти
+l.error.message=Не правильные логин или пароль
+l.register.text=Ещё не зарегистрировались? Тогда
+l.register.link=Регистрируйтесь
+
+###registration.html###
+r.title=Регистрация
+r.head=Пожалуйста, зарегистрируйтесь
+r.button=Зарегистрироваться
+r.error.message=Логин уже используется
