add operation with bookOrder entity, add navigation and some refactoring

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,11 @@ releaseDate.negative=Release date must be greater or equal zero!
 releaseDate.before=Release date must be lesser than now!
 quantity.zerOrLess=Quantity must be greater than zero!
 quantity.delta=Quantity can not be changed more than available value!
+closeDate.before=Close date must be equal or greater then open date!
+closeDate.after=Close date must be equal or greater than previous close date!
+closeDate.readingRoom=Close date for reading room must be equal to open date!
+orderStatus.orderBack=Order status must not be changed in reverse order!
+orderStatus.orderForward=Order`s status must be changed consecutively!
 
 ###common###
 c.login=Login
@@ -47,6 +52,13 @@ c.author.firstName=Author first name
 c.quantity=Quantity
 c.quantityPH=Enter quantity
 c.author=Author
+c.orderDate=Order date
+c.openDate=Open date
+c.closeDate=Close Date
+c.orderType=Order type
+c.orderStatus=Order status
+c.readingRoom=Reading room
+c.subscription=Subscription
 
 ###admin_page.html###
 a.title=Administrator page
@@ -125,3 +137,51 @@ r.title=Registration
 r.head=Please, sign up
 r.button=Sign up
 r.error.message=Login already in use
+
+###librarian_page.html###
+lp.title=Librarian page
+lp.head=Librarian page
+lp.headLeft=New book orders
+lp.headRight=Users subscriptions
+lp.button=Open
+
+###user_page.html###
+up.title=Private cabinet
+up.head=Private cabinet
+up.head1=Books in use
+
+###books.html###
+b.title=Available books
+b.head=Available books list
+b.button=Order
+
+###create_book_order.html###
+cbo.title=Book order
+cbo.head=Book order
+cbo.button=Order
+
+###edit_book_order.html###
+ebo.title=Edit book order
+ebo.head=Edit book order
+ebo.book=Book
+ebo.bookOrder=Book order
+ebo.closeDate=Close date
+ebo.new=New
+ebo.ready=Ready
+ebo.open=Open
+ebo.closed=Closed
+
+###subscription.html###
+s.title=Subscription
+s.head=Subscription
+
+###navbar###
+nav.brand=Library
+nav.home=Home
+nav.logout=Logout
+nav.private_cabinet=Private cabinet
+nav.users=Users
+nav.books=Books
+nav.authors=Authors
+nav.publishers=Publishers
+nav.login=Login
