--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -12,6 +12,11 @@ releaseDate.negative=Дата издания должна быть после 0 
 releaseDate.before=Дата издания должна предшествовать текущей дате!
 quantity.zerOrLess=Количество должно быть больше нуля!
 quantity.delta=Количество не может быть изменено более чем на величену доступных книг!
+closeDate.before=Дата возврата должна быть больше или равна дате выдачи книги!
+closeDate.after=Дата возврата должна быть больше или равна предыдущей дате возврата!
+closeDate.readingRoom=Дата возврата для читательного зала должна равнятся дате выдачи!
+orderStatus.orderBack=Сатус заказа не может изменяться в обратном порядке!
+orderStatus.orderForward=Статус заказа должен изменяться последовательно!
 
 ###common###
 c.login=Логин
@@ -42,11 +47,18 @@ c.titlePH=Введите название книги
 c.releaseDate=Год издания
 c.releaseDatePH=Введите год издания
 c.publisher=Издатель
-c.author.lastName=Имя автора
-c.author.firstName=Фамилия автора
+c.author.lastName=Фамилия автора
+c.author.firstName=Имя автора
 c.quantity=Количество
 c.quantityPH=Введите количество
 c.author=Автор
+c.orderDate=Дата заказа
+c.openDate=Дата выдачи
+c.closeDate=Дата возврата
+c.orderType=Тип заказа
+c.orderStatus=Статус заказа
+c.readingRoom=Читательный зал
+c.subscription=Абонемент
 
 ###admin_page.html###
 a.title=Страница администратора
@@ -125,3 +137,51 @@ r.title=Регистрация
 r.head=Пожалуйста, зарегистрируйтесь
 r.button=Зарегистрироваться
 r.error.message=Логин уже используется
+
+###librarian_page.html###
+lp.title=Страница библиотекаря
+lp.head=Страница библиотекаря
+lp.headLeft=Новые заказы
+lp.headRight=Абонименты пользователей
+lp.button=Открыть
+
+###user_page.html###
+up.title=Личный кабинет
+up.head=Личный кабинет
+up.head1=Абонемент
+
+###books.html###
+b.title=Доступные книги
+b.head=Спислк доступных книг
+b.button=Заказать
+
+###create_book_order.html###
+cbo.title=Заказать книгу
+cbo.head=Заказ книги
+cbo.button=Заказать
+
+###edit_book_order.html###
+ebo.title=Редактировать заказ
+ebo.head=Редактирование заказа
+ebo.book=Книга
+ebo.bookOrder=Заказ
+ebo.closeDate=Дата возврата
+ebo.new=Новый
+ebo.ready=Готов
+ebo.open=Открыт
+ebo.closed=Закрыт
+
+###subscription.html###
+s.title=Абонемент
+s.head=Абонемент
+
+###navbar###
+nav.brand=Библиотека
+nav.home=Домой
+nav.logout=Выйти
+nav.private_cabinet=Личный кабинет
+nav.users=Пользователи
+nav.books=Книги
+nav.authors=Авторы
+nav.publishers=Издатели
+nav.login=Войти
