--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,6 +33,8 @@ c.button.add=Add
 c.button.edit=Edit
 c.button.delete=Delete
 c.button.submit=Submit
+c.button.find=Find
+c.button.sort=Sort
 c.password=Password
 c.passwordPH=Enter password
 c.passwordConfirm=Password conformation
@@ -59,6 +61,14 @@ c.orderType=Order type
 c.orderStatus=Order status
 c.readingRoom=Reading room
 c.subscription=Subscription
+c.sort.order=Sort order
+c.sort.order.asc=Ascendant
+c.sort.order.desc=Descendant
+c.sort.by=Sort by
+c.find.by=Find by
+c.find.by.title=title
+c.find.by.author.lastName=Author last name
+c.find.by.author.firstName=Author first name
 
 ###admin_page.html###
 a.title=Administrator page
