--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -33,6 +33,8 @@ c.button.add=Добавить
 c.button.edit=Редактировать
 c.button.delete=Удалить
 c.button.submit=Отправить
+c.button.find=Искать
+c.button.sort=Сортировать
 c.password=Пароль
 c.passwordPH=Введите пароль
 c.passwordConfirm=Подтверждение пароля
@@ -59,6 +61,14 @@ c.orderType=Тип заказа
 c.orderStatus=Статус заказа
 c.readingRoom=Читательный зал
 c.subscription=Абонемент
+c.sort.order=Порядок сортировки
+c.sort.order.asc=По возрастанию
+c.sort.order.desc=По убыванию
+c.sort.by=Сортировать по
+c.find.by=Искать по
+c.find.by.title=названию
+c.find.by.author.lastName=Фамилии автора
+c.find.by.author.firstName=Имени автора
 
 ###admin_page.html###
 a.title=Страница администратора
