add tests to UserController and some refactoring

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -162,7 +162,7 @@ up.head1=Абонемент
 
 ###books.html###
 b.title=Доступные книги
-b.head=Спислк доступных книг
+b.head=Список доступных книг
 b.button=Заказать
 
 ###create_book_order.html###
