add error pages and some refactoring

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -35,6 +35,7 @@ c.button.delete=Удалить
 c.button.submit=Отправить
 c.button.find=Искать
 c.button.sort=Сортировать
+c.button.back=Назад
 c.password=Пароль
 c.passwordPH=Введите пароль
 c.passwordConfirm=Подтверждение пароля
@@ -195,3 +196,13 @@ nav.books=Книги
 nav.authors=Авторы
 nav.publishers=Издатели
 nav.login=Войти
+
+###error.html###
+e.title=Страница ошибки
+e.h1=Что-то пошло не так!
+e.h2=Мы рабоатем над этим!
+
+###error_404.html###
+e404.title=Страница 404
+e404.h1=Извините, но такой страницы не существует!
+e404.h2=Попробуйте ещё!
