--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ c.button.delete=Delete
 c.button.submit=Submit
 c.button.find=Find
 c.button.sort=Sort
+c.button.back=Back
 c.password=Password
 c.passwordPH=Enter password
 c.passwordConfirm=Password conformation
@@ -195,3 +196,13 @@ nav.books=Books
 nav.authors=Authors
 nav.publishers=Publishers
 nav.login=Login
+
+###error.html###
+e.title=Error page
+e.h1=Something went wrong!
+e.h2=We are working on it!
+
+###error_404.html###
+e404.title=404 page
+e404.h1=Sorry, but there is no such page!
+e404.h2=Try again!
