add notification that user is blocked

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -139,7 +139,8 @@ i.head=List of available books
 l.title=Login
 l.head=Please, login
 l.button=Log in
-l.error.message=Invalid login or password
+l.error.message.badCredentials=Invalid login or password
+l.error.message.userIsBlocked=You are blocked, please contact administration
 l.register.text=Not registered yet? Then
 l.register.link=Register
 
