--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -139,7 +139,8 @@ i.head=Список доступных книг
 l.title=Войти
 l.head=Пожалуйста, залогиньтесь
 l.button=Войти
-l.error.message=Не правильные логин или пароль
+l.error.message.badCredentials=Не правильные логин или пароль
+l.error.message.userIsBlocked=Вы заблокированы, пожалуйста, обратитесь к админимтрации
 l.register.text=Ещё не зарегистрировались? Тогда
 l.register.link=Регистрируйтесь
 
